# ic_nft_creater

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  env  fly.toml  package-lock.json  package.json  shopify.app.ic-nft-creater.toml  shopify.app.toml
.github/workflows/: docker-publish.yml
app/: db.server.js  shopify.server.js
app/canister/: nft_factory_service.js  nft_icrc7_service.js
app/common/: local_file.js
app/models/: AppSetting.server.js  NFTCollection.server.js  NFTGift.server.js  NFTInfo.server.js  NFTProduct.server.js  QRCode.server.js
app/routes/: app._index.jsx  app.collections.$id.jsx  app.collections.jsx  app.jsx  app.main_collections.jsx  app.main_gifts.jsx  app.main_list_nfts.jsx  app.main_nfts.jsx  app.main_products.jsx  app.main_settings.jsx  app.nft_infos.$id.jsx  app.qrcodes.$id.jsx  collection_info.jsx  qrcodes.$id.jsx
app/schedule/: index.js  task.js
app/utils/: binary.js  (+5 more)
canister/: .gitignore  README.md  canister_ids.json  dfx.json
canister/nft_factory/src/factory/: Cargo.toml  service.did
canister/nft_factory/src/factory/src/: lib.rs
canister/nft_factory/src/icrc7/: Cargo.toml  icrc7.did
canister/nft_factory/src/icrc7/src/: candid_file_generator.rs  errors.rs  http.rs  init_method.rs  lib.rs  state.rs  types.rs
canister/nft_factory/src/icrc7/wasm/: icrc7.wasm
canister/nft_factory/src/icrc7_with_assets/: Cargo.toml  icrc7_with_assets.did
canister/nft_factory/src/icrc7_with_assets/explore/: index.html
canister/nft_factory/src/icrc7_with_assets/src/: assets_stable.rs  candid_file_generator.rs  errors.rs  lib.rs  query_method.rs  state.rs
canister/nft_factory/src/icrc7_with_assets/src/assets/: delete.rs  mod.rs  query.rs  upload.rs
canister/nft_factory/src/icrc7_with_assets/src/ic_util/: mod.rs
canister/nft_factory/src/icrc7_with_assets/src/system/: maintainable.rs  mod.rs  permissions.rs
canister/nft_factory/src/icrc7_with_assets/wasm/: icrc7_with_assets.wasm
canister/nft_factory/src/nft_factory_backend/: Cargo.toml  nft_factory_backend.did
canister/nft_factory/src/nft_factory_backend/src/: lib.rs  schedule.rs  stable.rs  types.rs  update.rs
canister/nft_factory/src/nft_factory_backend/src/common/: did.rs  mod.rs
prisma/: schema.prisma
(+68 files in other folders)
