[package]
name = "factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.6.10"
serde = "1.0.171"
icrc-ledger-types = { git ="https://github.com/dfinity/ic" }