[package]
name = "nft_factory_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ic-cdk = "0.11.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.95"
icrc-ledger-types = "0.1.4"
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}

ic-canister-kit = { version = "0.2.0" }
